# vlm-exp

./: .ExifTool_config  .gitignore  caption_dngs.py  caption_dngs_final.py  caption_to_xmp.py  pyproject.toml  test_aesthetics.py  test_caption_only.py  test_caption_test2.py  test_dng.py  test_dng_pose.py  test_moondream3_mlx.py  test_moondream_skills.py  test_vlm.py
autoont/: .gitignore  README.md  aggregate_graphs.py  autoont.py  build_ontology.py  extract_graphs.py  observe.py  parse_spo.py  pyproject.toml  test_kggen.py
autoont/docs/: 2025_12_23_MULTIMODAL_INPUT.md  2025_12_23_SUPERONTOLOGY_MAYBE.md  2025_12_29_EXPERIENTIAL_ONTOLOGIES.md  REFERENCES.md
docs/: 2025_12_22_semantic_fingerprint_eval.md
