[project]
name = "autoont"
version = "0.1.0"
description = "Automatic ontology generation from images via VLM observations"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.0",
    "concepts>=0.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = []
